# power

./: .gitignore  CLAUDE.md  CMakeLists.txt  Claude.MD  README.md  css.css  home.html  security.html  sprinkler.conf
src/: CMakeLists.txt  Configuration.hpp  Connection.cpp  Connection.hpp  Device.cpp  Device.hpp  DeviceManager.hpp  Exceptions.hpp  History.cpp  History.hpp  JsonParser.cpp  JsonParser.hpp  Logger.cpp  Logger.hpp  LoggerConfig.hpp  Options.cpp  Options.hpp  Weather.cpp  Weather.hpp  WeatherManager.hpp  lib.cpp  main.cpp  main.cpp.bak  readWeather.cpp  webserver.cpp
tst/: CMakeLists.txt  test.cpp
